--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
   "scripts": {
     "build": "tsc",
+    "docs": "typedoc",
     "format": "prettier . --write",
     "lint:fix": "eslint ./ --fix --ext ts",
     "lint": "eslint ./ --ext ts",
@@ -33,6 +34,7 @@
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
+    "typedoc": "^0.25.2",
     "typescript": "^5.2.2"
   }
 }
