--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "strict": true,
     "target": "esnext"
   },
-  "exclude": ["node_modules", "coverage", "dist"],
-  "include": ["src/**/*.ts"]
+  "exclude": ["node_modules", "coverage", "dist", "docs"],
+  "include": ["src/**/*.ts"],
+  "typedocOptions": {
+    "entryPoints": ["src/**/*.ts"],
+    "out": "docs"
+  }
 }
