--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": ".",
     "declaration": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "module": "commonjs",
+    "noImplicitAny": true,
+    "noImplicitThis": true,
     "outDir": "dist",
     "paths": {
       "*": ["src/*"]
@@ -12,6 +14,7 @@
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
+    "strictNullChecks": true,
     "target": "esnext"
   },
   "exclude": ["node_modules", "coverage", "dist", "docs"],
