--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,21 @@
 {
   "extends": [
+    "airbnb-base",
     "airbnb-typescript/base",
-    "prettier",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:import/typescript"
+    "plugin:@typescript-eslint/recommended-type-checked", 
+    "plugin:@typescript-eslint/stylistic-type-checked",
+    "plugin:import/typescript",
+    "plugin:prettier/recommended"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.eslint.json"
   },
-  "plugins": ["@typescript-eslint", "import", "prettier"],
+  "plugins": ["@typescript-eslint", "import"],
   "root": true,
   "rules": {
     "no-console": ["off"],
+    "no-underscore-dangle": ["off"],
     "prettier/prettier": ["error"]
   }
 }
