Upgrade to ESLint 9

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,13 +6,13 @@
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
     "isolatedModules": true,
-    "module": "nodenext",
-    "moduleResolution": "nodenext",
+    "module": "ESNext",
+    "moduleResolution": "bundler",
     "outDir": "dist",
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
-    "target": "esnext"
+    "target": "ESNext"
   },
   "include": ["src/**/*.ts"],
   "typedocOptions": {
