--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Pedro Rodrigues",
   "license": "MIT",
   "main": "dist/enigma.js",
+  "type": "module",
   "types": "dist/enigma.d.ts",
   "repository": {
     "type": "git",
@@ -19,24 +20,24 @@
     "build": "tsc",
     "docs": "typedoc",
     "format": "prettier . --write",
-    "lint:fix": "eslint ./ --fix --ext ts",
-    "lint": "eslint ./ --ext ts",
+    "lint:fix": "eslint --fix",
+    "lint": "eslint",
     "test": "jest"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.12",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "@typescript-eslint/parser": "^7.18.0",
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb-typescript": "^18.0.0",
+    "@eslint/js": "^9.16.0",
+    "@types/jest": "^29.5.14",
+    "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-jest": "^28.9.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "globals": "^15.13.0",
     "jest": "^29.7.0",
-    "prettier": "^3.3.3",
-    "ts-jest": "^29.2.4",
+    "prettier": "^3.4.2",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typedoc": "^0.26.5",
-    "typescript": "^5.5.4"
+    "typedoc": "^0.27.3",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.17.0"
   }
 }
