--- a/package.json
+++ b/package.json
@@ -5,8 +5,17 @@
   "author": "Pedro Rodrigues",
   "license": "MIT",
   "main": "dist/enigma.js",
-  "type": "module",
   "types": "dist/enigma.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/enigma.js",
+      "require": "./dist/enigma.js"
+    }
+  },
+  "files": [
+    "dist/**/*"
+  ],
+  "sideEffects": false,
   "repository": {
     "type": "git",
     "url": "https://github.com/pgrodrigues/node-enigma-m3.git"
@@ -16,28 +25,30 @@
     "enigma",
     "typescript"
   ],
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "docs": "typedoc",
     "format": "prettier . --write",
     "lint:fix": "eslint --fix",
     "lint": "eslint",
+    "prepare": "npm run build",
     "test": "jest"
   },
   "devDependencies": {
-    "@eslint/js": "^9.29.0",
+    "@eslint/js": "^9.31.0",
     "@types/jest": "^30.0.0",
-    "eslint": "^9.29.0",
-    "eslint-config-prettier": "^10.1.5",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jest": "^29.0.1",
-    "eslint-plugin-prettier": "^5.5.0",
-    "globals": "^16.2.0",
-    "jest": "^30.0.2",
-    "prettier": "^3.5.3",
+    "eslint-plugin-prettier": "^5.5.3",
+    "globals": "^16.3.0",
+    "jest": "^30.0.5",
+    "prettier": "^3.6.2",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
-    "typedoc": "^0.28.5",
+    "typedoc": "^0.28.7",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.1"
+    "typescript-eslint": "^8.38.0"
   }
 }
