--- a/package.json
+++ b/package.json
@@ -33,22 +33,26 @@
     "lint:fix": "eslint --fix",
     "lint": "eslint",
     "prepare": "npm run build",
-    "test": "jest"
+    "test": "jest",
+    "ts": "tsc --noEmit"
+  },
+  "engines": {
+    "node": "24.x"
   },
   "devDependencies": {
-    "@eslint/js": "^9.31.0",
+    "@eslint/js": "^9.39.1",
     "@types/jest": "^30.0.0",
-    "eslint": "^9.31.0",
+    "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-jest": "^29.0.1",
-    "eslint-plugin-prettier": "^5.5.3",
-    "globals": "^16.3.0",
-    "jest": "^30.0.5",
+    "eslint-plugin-jest": "^29.1.0",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.5.0",
+    "jest": "^30.2.0",
     "prettier": "^3.6.2",
-    "ts-jest": "^29.4.0",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
-    "typedoc": "^0.28.7",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.38.0"
+    "typedoc": "^0.28.14",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.4"
   }
 }
